make categoryId optional if someone chooses not to sync up videos during registration
